# UNSAID

./: .editorconfig  .env.example  .gitignore  CNAME  Dockerfile  README.md  alembic.ini  docker-compose.yml  fly.toml  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  vercel.json
.github/workflows/: ci.yml  deploy.yml
.kilo/plans/: unsaid-luxury-storefront-redesign-and-ai-consultant.md
.playwright-mcp/: page-2026-06-19T14-17-39-531Z.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
api/: debug.py  index.py
app/: main.py
app/core/: config.py  csrf.py  exceptions.py  logging_config.py  media.py  rate_limit.py  security.py  security_headers.py  templates.py
app/db/: knowledge_seed.py  seed.py  session.py
app/models/: __init__.py  analytics.py  knowledge.py  order.py  product.py  user.py
app/routers/: __init__.py  account.py  admin.py  analytics.py  chat.py  orders.py  pages.py  products.py  quiz.py
app/schemas/: __init__.py  product.py
app/services/: ai.py  analytics.py  auth.py  brute_force.py  insights.py  orders.py  password.py  rag.py
app/static/: csrf.js
app/static/css/: unsaid-theme.css  unsaid.css
app/templates/: base.html  contact_page.html  error.html  index.html  legal_page.html  product_detail.html
app/templates/account/: dashboard.html  login.html  order_detail.html  (+3 more)
app/utils/: forms.py
tests/: conftest.py  test_admin.py  test_admin_products_crud.py  test_analytics.py  test_auth.py  test_chat.py  test_orders.py  test_pages.py  test_products_api.py  test_quiz.py
(+18 files in other folders)
