[project]
name = "unsaid"
version = "0.1.0"
description = "UNSAID — Extrait de Parfum House Commerce API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "SQLAlchemy>=2.0.30",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "jinja2>=3.1.4",
    "groq>=0.9.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.23.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
